# 2D-viscous-mesh-generation

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: continuous.yml
include/: dtiso2deigen.h  loops.h  multiplenormal.h  nearestsearch.h  normalprismatic.h  readDAT.h  readSTLbnd.h  rigidmapping.h  writeVTK.h
src/: main.cpp  multiplenormal.cpp  normalprismatic.cpp  rigidmapping.cpp
test/: I.step  I.wrl  IMR.wrl  M.step  M.wrl  R.stp  R.wrl  U-shapre.stl  bunny.wrl  crmhl.wrl  sharp.wrl  twocube.wrl  ushape.wrl
third/dtiso2d/: CMakeLists.txt  genmesh2d.cpp  genmesh2d.h  iso2d.cpp  iso2d.h  iso2d_error.cpp  iso2d_error.h
third/geom/: CMakeLists.txt  geom_func.cpp  geom_func.h  intersection_func.cpp  moller.c  predicates.c  ttotr.c
